# cmakeProjectTemplate

./: CMakeLists.txt  README.md
include/: math.h
src/: CMakeLists.txt  main.cpp  math.cpp
test/: CMakeLists.txt  test_sum.cpp
